--- a/PalladiumDwh.ClientReader.Core.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Core.Tests/database.config
@@ -6,7 +6,7 @@
     />
   <add
     name="EMRDatabase"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_IQCareKE_CRISSPQ3_KagumoDH;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True"
+    connectionString="Data Source=192.168.1.12\SQLSERVER;Initial Catalog=IQTools_IQCareKE_CHAPQ1_HurumaHealthCentreLaikipiaEast;Persist Security Info=True;User ID=sa;Password=c0nstella;MultipleActiveResultSets=True"
     providerName="System.Data.SqlClient"
     />
   <add
