--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net46" />
   <package id="Effort.EF6" version="1.3.0" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="Faker" version="1.2" targetFramework="net46" />
