--- a/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
+++ b/PalladiumDwh.ClientReader.Infrastructure/PalladiumDwh.ClientReader.Infrastructure.csproj
@@ -131,6 +131,10 @@
     <Compile Include="Migrations\201701301204099_ColumnsOrder.Designer.cs">
       <DependentUpon>201701301204099_ColumnsOrder.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701311708571_AddFacilityName.cs" />
+    <Compile Include="Migrations\201701311708571_AddFacilityName.Designer.cs">
+      <DependentUpon>201701311708571_AddFacilityName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -170,6 +174,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701301204099_ColumnsOrder.resx">
       <DependentUpon>201701301204099_ColumnsOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701311708571_AddFacilityName.resx">
+      <DependentUpon>201701311708571_AddFacilityName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
