add ProfileManager to generate profiles

--- a/PalladiumDwh.ClientUploader.Core/PalladiumDwh.ClientUploader.Core.csproj
+++ b/PalladiumDwh.ClientUploader.Core/PalladiumDwh.ClientUploader.Core.csproj
@@ -45,9 +45,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\IClientPatientRepository.cs" />
+    <Compile Include="Interfaces\IProfileManager.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
-    <Compile Include="Interfaces\ISendPatientProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProfileManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PalladiumDwh.ClientReader.Core\PalladiumDwh.ClientReader.Core.csproj">
@@ -61,6 +62,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
