--- a/PalladiumDwh.ClientUploader.Core.Tests/PalladiumDwh.ClientUploader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientUploader.Core.Tests/PalladiumDwh.ClientUploader.Core.Tests.csproj
@@ -44,6 +44,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -60,9 +61,11 @@
   <ItemGroup>
     <Compile Include="ProfileManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PushProfileServiceTests.cs" />
     <Compile Include="TestHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
