--- a/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
+++ b/PalladiumDwh.ClientReader.Core/PalladiumDwh.ClientReader.Core.csproj
@@ -114,6 +114,9 @@
     <Compile Include="Model\DTO\ClientPatientPharmacyExtractDTO.cs" />
     <Compile Include="Model\DTO\ClientPatientStatusExtractDTO.cs" />
     <Compile Include="Model\DTO\ClientPatientVisitExtractDTO.cs" />
+    <Compile Include="Model\ExtractSetting.cs" />
+    <Compile Include="Model\EMR.cs" />
+    <Compile Include="Model\Project.cs" />
     <Compile Include="Model\Profile\ClientExtractProfile.cs" />
     <Compile Include="Model\Profile\ClientPatientARTProfile.cs" />
     <Compile Include="Model\Profile\ClientPatientBaselineProfile.cs" />
