--- a/PalladiumDwh.ClientReader.Infrastructure/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure/packages.config
@@ -3,6 +3,7 @@
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net46" />
   <package id="Dapper" version="1.50.2" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.Seeder.EF6" version="0.4.0" targetFramework="net46" />
   <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
