--- a/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
+++ b/PalladiumDwh.ClientReader.Infrastructure.Tests/database.config
@@ -4,9 +4,10 @@
     connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=DWAPIRemote;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True"
     providerName="System.Data.SqlClient" 
     />
+   
   <add
     name="EMRDatabase"
-    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_IQCareKE_CRISSPQ3_KagumoDH;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True"
+    connectionString="Data Source=127.0.0.1\Koske14;Initial Catalog=IQTools_Test;Persist Security Info=True;User ID=sa;Password=maun;MultipleActiveResultSets=True"
     providerName="System.Data.SqlClient"
     />
   <add
@@ -19,4 +20,5 @@
     connectionString="Server=127.0.0.1;Port=5432;Database=hmis;User Id=postgres;Password=postgres;"
     providerName="Npgsql"
     /> 
+
 </connectionStrings>
