--- a/PalladiumDwh.ClientReader.Infrastructure/packages.config
+++ b/PalladiumDwh.ClientReader.Infrastructure/packages.config
@@ -6,7 +6,13 @@
   <package id="EntityFramework.Seeder.EF6" version="0.4.0" targetFramework="net46" />
   <package id="Faker.Net" version="1.0.3" targetFramework="net46" />
   <package id="log4net" version="2.0.7" targetFramework="net46" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Logging" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="1.1.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net46" />
   <package id="NBuilder" version="4.0.0" targetFramework="net46" />
-  <package id="Npgsql" version="3.1.9" targetFramework="net46" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net46" />
+  <package id="Npgsql" version="3.2.0" targetFramework="net46" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net46" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
 </packages>
