--- a/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
+++ b/PalladiumDwh.ClientReader.Core.Tests/PalladiumDwh.ClientReader.Core.Tests.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Services\SyncServiceFromCsvTests.cs" />
     <Compile Include="Services\SyncServiceTests.cs" />
     <Compile Include="TestHelpers.cs" />
+    <Compile Include="TestInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
