--- a/PalladiumDwh.ClientUploader.Infrastructure.Tests/PalladiumDwh.ClientUploader.Infrastructure.Tests.csproj
+++ b/PalladiumDwh.ClientUploader.Infrastructure.Tests/PalladiumDwh.ClientUploader.Infrastructure.Tests.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Data\ClientPatientRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers.cs" />
+    <Compile Include="TestInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
