--- a/PalladiumDwh.Shared.Data.Tests/PalladiumDwh.Shared.Data.Tests.csproj
+++ b/PalladiumDwh.Shared.Data.Tests/PalladiumDwh.Shared.Data.Tests.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Repository\GenericRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers.cs" />
+    <Compile Include="TestInitializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
